Fix #1368 menu hover texts say "undefined" Fix #1367 Incorrect cursor in prism editor Fix #1370 Cant recover some keyframes with undo when they were overlapping

--- a/css/prism.css
+++ b/css/prism.css
@@ -21,6 +21,7 @@ pre[class*="language-"] {
 	word-break: normal;
 	word-wrap: normal;
 	line-height: 1.5;
+	cursor: text;
 
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
